--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="well">
-          <h5>SELECT Sample:</h5>
+          <h5><b>SELECT Sample:</b></h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
