--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Yuta Yamaguchi Belly Button Biodiversity Dashboard</title>
+  <title>Belly Button Biodiversity Dashboard</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
@@ -13,7 +13,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
+      <div class="col-md-12 jumbotron text-center" style="background-color: darkseagreen">
         <h2>Belly Button Biodiversity Dashboard</h2>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
